# paper-refiner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml  run_refiner.py
config/: README.md  cookies.json.template  refiner_config.yaml  session_params.json.template
paper_api/: __init__.py  client.py  config.py  errors.py
paper_refiner/: __init__.py  __main__.py  iteration_coordinator.py  main.py  models.py  orchestrator.py  pass_coordinator.py
paper_refiner/agents/: __init__.py  editor.py  reviewer.py  scorer.py
paper_refiner/core/: __init__.py  convergence_detector.py  issue_tracker.py  reflection_tracer.py  revision_recorder.py  section_version_manager.py
paper_refiner/prompts/: __init__.py  pass_prompts.py  reviewer_prompts.py
paper_refiner/tools/: __init__.py  migrate_issues.py
paper_refiner/utils/: __init__.py  config_loader.py
tests/: test_all.py  test_file_upload_display.py  test_modules.py  test_multi_iteration.py  test_report.py
tools/: extract_session_params.py  generate_reflection_report.py  get_conversation_id.py  package_submission.py
